# QT_painter

./: CMakeLists.txt  README.md
src/: Design_window.h  ellipse.cpp  figure.cpp  figure.h  main.cpp  mainwindow.cpp  mainwindow.h  rectangle.cpp  triangle.cpp
